<resources>
    <string name="title_deck_detail">Deck Detail</string>
    <string name="title_activity_main">Deck Builder for Netrunner</string>
    <string name="title_activity_deck">DeckActivity</string>
    <string name="title_activity_deck_info_fragment">DeckInfoFragment</string>
    <string name="title_activity_choose_identity">Choose identity</string>
    <string name="app_name">Deck Builder for Netrunner</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="deck_name">Deck Name</string>
    <string name="description">Description</string>
    <string name="ok">OK</string>
    <string name="influence_char">•</string>
    <string name="influence_char_3">•••</string>
    <string name="clear_all">Clear All</string>
    <string name="clear_checked">Clear checked</string>
    <string name="cancel">Cancel</string>
    <string name="delete_deck">Delete deck</string>
    <string name="clone_deck">Clone deck</string>
    <string name="copy_of">Copy of %1$s</string>
    <string name="view_fullscreen">View fullscreen</string>
    <string name="total_number_of_decks">Total number of decks: </string>
    <string name="number_images_cached">Number of images cached: </string>
    <string name="download_all_images">Download all images</string>
    <string name="click_logo_to_open_drawer">Click the logo to open the drawer</string>
    <string name="view_cards_by_set">View cards by set</string>
    <string name="view_cards">View cards</string>
    <string name="deck_is_empty">Deck is empty</string>
    <string name="view_deck">View deck</string>
    <string name="new_deck">New Deck</string>
    <string name="corp">Corp</string>
    <string name="runner">Runner</string>
    <string name="my_decks">My Decks</string>
    <string name="display_all_data_packs">Display all data packs</string>
    <string name="data_packs_to_display">Data packs to display</string>
    <string name="data_packs_to_display_desc">Which data packs are displayed in MyCards</string>
    <string name="tap_to_close_card_preview">Tap to close card preview</string>
    <string name="cards">cards</string>
    <string name="please_wait">Please wait...</string>
    <string name="import_deck">Import Deck</string>
    <string name="search_hint">Search cards...</string>
    <string name="amount_of_core_decks">Amount of core decks</string>
    <string name="data_packs">Data Packs</string>
    <string name="hide_non_virtual_apex">Hide Non-Virtual Resources for Apex</string>
    <string name="gui">Interface</string>
    <string name="display_set_names_with_cards">Display set names with cards</string>
    <string name="new_hand">New Hand</string>
    <string name="draw">Draw</string>
    <string name="infinite_symbol">∞</string>
    <string name="has_unknown_cards">Error: has unknown cards!</string>
    <string name="drawer_new_deck_runner">New Runner Deck</string>
    <string name="drawer_new_deck_corp">New Corp Deck</string>
    <string name="downloading_cards">Downloading cards</string>
    <string name="downloading_cards_complete">Cards download completed</string>
    <string name="downloading_images">Downloading images</string>
    <string name="downloading_images_complete">Images download completed</string>
    <string name="downloading_images_amount" formatted="false">%d of %d downloaded</string>
    <string name="loading_cards">Loading cards</string>
    <string name="message_clear_all_cards">Are you sure you want to remove all cards?</string>
    <string name="message_clear_checked_cards">Are you sure you want to remove all checked cards?</string>
    <string name="message_delete_deck">Are you sure you want to delete this deck?</string>
    <string name="message_deck_deleted">Deck deleted successfuly</string>
    <string name="toast_deck_cloned_successfuly">Deck cloned successfuly. You are now viewing the cloned deck.</string>
    <string name="toast_require_one_datapack">You must select at least one data pack</string>
    <string name="download_all_images_question">Download size may be large (70M+). Are you sure you	want to download all images?</string>
    <string name="download_all_images_question_first_launch">Do you want to cache all images? You may download them later using the menu. Download size may be large (70M+).</string>
    <string name="error_downloading_cards">There was an error downloading the cards.</string>
    <string name="error_downloading_cards_quit">Could not download the initial cards list. Please connect to the internet and try again later.</string>
    <string name="tab_info">Info</string>
    <string name="tab_my_cards">My cards</string>
    <string name="tab_cards">Cards</string>
    <string name="tab_build">Build</string>
    <string name="tab_stats">Stats</string>
    <string name="tab_hand">Draw</string>
    <string name="info_influence">Influence: </string>
    <string name="info_cards">Cards: </string>
    <string name="info_agenda">Agendas: </string>
    <string name="build_cards_to_add">Cards to add</string>
    <string name="build_cards_to_remove">Cards to remove</string>
    <string name="stats_bar_chart_title">Cost &amp; Strength Distribution</string>
    <string name="stats_bar_chart_cost_title">Cost Distribution</string>
    <string name="stats_cost_marker">%1$d cards with cost %2$d.</string>
    <string name="stats_strength_marker">%1$d cards with strength %2$d.</string>
    <string name="stats_cost">Cost</string>
    <string name="stats_strength">Strength</string>
    <string name="stats_type_chart">Card Types</string>
    <string name="stats_ice_subtype_chart">%1$s Subtypes</string>
    <string name="menu_about">About</string>
    <string name="menu_new_corp">Corporation</string>
    <string name="menu_new_runner">Runner</string>
    <string name="menu_view_sets">View card sets</string>
    <string name="menu_browse_cards">Browse cards</string>
    <string name="menu_refresh_cards">Update cards list</string>
    <string name="menu_change_identity">Change identity</string>
    <string name="menu_search">Search</string>
    <string name="menu_options">Options</string>
    <string name="menu_share">Share/Export</string>
    <string name="choose_your_side">Choose your side</string>
    <string name="my_cards">My Cards</string>
    <string name="title_activity_view_deck_fullscreen">ViewDeckFullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="about_text" formatted="false">Version %s\n\nImages have been created by <a href="http://prisoner453.deviantart.com/art/Netrunner-Assets-351310060">prisoner453</a>.\n\nThe copyrightable portions of Android: Netrunner: The Card Game and its expansions are © 2012–2013 Wizards &amp; Fantasy Flight Publishing, Inc. Netrunner is licensed by Wizards of the Coast LLC. Netrunner is a TM of R. Talsorian Games, Inc. Android, all Android: Netrunner: The Card Game expansion titles, Living Card Game, LCG, LCG logo and Fantasy Flight Supply are trademarks and/or registered trademarks of Fantasy Flight Publishing, Inc. All rights reserved to their respective owners.</string>
    <string name="title_activity_import_deck_from_net_runner_db">Import Deck</string>
    <string-array name="arr">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
    </string-array>
    <string-array name="arrAmountOfCoreDecks">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="arrCoreCountPreference">
        <item>Default</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="arrCardsLanguage">
        <item>English</item>
        <item>French</item>
        <item>Deutsch</item>
        <item>Spanish</item>
        <item>Polish</item>
        <item>Italian</item>
    </string-array>
    <string-array name="arrCardsLanguageValues">
        <item>en</item>
        <item>fr</item>
        <item>de</item>
        <item>es</item>
        <item>pl</item>
        <item>it</item>
    </string-array>
    <string-array name="arrEmpty" />
    <string-array name="arrDeckTypes">
        <item>Corporation</item>
        <item>Runner</item>
    </string-array>
    <string name="title_activity_import_octgn">Import Deck</string>
    <string name="octgn_file">OCTGN file</string>
    <string name="plain_text">Plain Text</string>
    <string name="title_activity_material_main">MaterialMainActivity</string>
    <string name="cache">Cache</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="delete_all_images">Delete all images from the cache</string>
    <string name="message_clear_cache">Are you sure you want to delete all images from the cache? Your decks will NOT be deleted.</string>
    <string name="title_activity_view_deck_grid">ViewDeckGridActivity</string>
    <string name="view_all_cards"><![CDATA[< ALL CARDS >]]></string>
    <string name="cards_language">Cards language</string>
    <string name="cards_language_summary">Only affects the text (the images are english only)</string>
    <string name="downloading_cards_restart">Download cards... The application will restart automatically.</string>
    <string name="unbuild">Unbuild</string>
    <string name="message_unbuild">Are you sure you want to unbuild your deck and regenerate the \"Cards to add\" section?</string>
    <string name="msg_error_importing_deck_title">Import Deck Failed</string>
    <string name="msg_error_importing_deck">Error importing deck. Valid files are o8d and anrdecks. If the file is valid, try updating your card list and try again.</string>
    <string name="msg_error_update_card_list">Could not import deck. Please update your card list and try again.</string>
    <string name="modifications_to_deck">Modifications to deck</string>
    <string name="rules">Rules</string>
    <string name="use_most_wanted_list">Use Most Wanted List</string>
    <string name="use_most_wanted_list_summary">Reduces the Identity\'s influence limit for when specific cards are included in the deck</string>
    <string name="export_all_decks">Export all decks</string>
    <string name="import_decks_from_file">Import decks from file</string>
    <plurals name="deck_imported_successfully">
        <item formatted="false" quantity="one">%1$d deck imported successfully%2$s</item>
        <item formatted="false" quantity="other">%1$d decks imported successfully%2$s</item>
    </plurals>
    <string name="title_activity_card_full_screen">CardFullScreenActivity</string>
    <string name="cards_download_complete">Cards download complete</string>
    <string name="jintekinet">Jinteki.net</string>
    <string name="import_decks">Import Decks</string>
    <string name="mwl">MWL</string>
    <string name="card_list_updated_successfully">Card list updated successfully</string>
    <string name="set_card_pool">Set card pool</string>
    <string name="choose_packs">Choose the packs to use</string>
    <string name="pack_filter">Packs: </string>
    <string name="reset">Reset</string>
    <string name="title_browse_cards">Cards</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="mwl_version">MWL Version</string>
    <string name="set_core_count">Set core count</string>
    <string name="my_collection">My Collection</string>
    <string name="about_my_collection">What packs do you own?</string>
    <string name="default_format">Default Format</string>
    <string name="nrdb_card_url">https://netrunnerdb.com/en/card/%s</string>
    <string name="format_label">Format:</string>
    <string name="action_decks">Decks</string>
    <string name="action_cards">Cards</string>
</resources>