<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_storage_white_24dp"
        android:title="@string/action_decks"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_cards"
        android:enabled="true"
        android:icon="@drawable/icon_deck"
        android:title="@string/action_cards"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
</menu>