<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:baselineAligned="false"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/build_cards_to_add"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ListView
                android:id="@+id/lstCardsToAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </ListView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/lblNumberOfDecks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/build_cards_to_remove"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ListView
                android:id="@+id/lstCardsToRemove"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </ListView>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnClearAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_checked" />

</LinearLayout>