<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="?actionBarSize"

    android:orientation="vertical">

    <TextView
        android:id="@+id/lblFormat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/mwl_version"
        android:padding="4dp"
        android:text="@string/format_label"
        android:textColor="@color/text_default"
        android:textSize="18dp"
        android:layout_marginLeft="8sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/spnFormat"
        app:layout_constraintBottom_toBottomOf="@id/spnFormat" />

    <Spinner
        android:id="@+id/spnFormat"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:minWidth="123dp"

        android:padding="4dp"
        app:layout_constraintStart_toEndOf="@id/lblFormat"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblPacks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/mwl_version"
        android:padding="4dp"
        android:text="@string/pack_filter"
        android:textColor="@color/text_default"
        android:textSize="18sp"
        android:layout_marginLeft="8sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblFormat" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pack_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblPacks"
        tools:context=".ui.decks.ItemFragment"
        tools:listitem="@layout/fragment_item" />

</androidx.constraintlayout.widget.ConstraintLayout>