<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="top"
    tools:context=".DeckFragment" >

    <ImageView
        android:id="@+id/imgIdentity"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="top"
        android:src="@raw/image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/lblLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/deck_name"
            android:singleLine="true" />

        <EditText
            android:id="@+id/txtDeckDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="top|left"
            android:hint="@string/description"
            android:inputType="textMultiLine" >

            <requestFocus />
        </EditText>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/lblFormat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/mwl_version"
                    android:padding="4dp"
                    android:text="Format:"
                    android:textColor="@color/text_default"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spnFormat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_column="1"
                    android:entries="@array/arr"
                    android:padding="0dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/lblMwlVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginLeft="4dp"
                    android:hint="@string/mwl_version"
                    android:padding="4dp"
                    android:text="MWL v2.2"
                    android:textColor="@color/text_default"
                    android:textSize="16sp" />
            </TableRow>

        </TableLayout>


    </LinearLayout>

</LinearLayout>